--- a/FCI/ui/fci_16_admin_printer_setup.ui
+++ b/FCI/ui/fci_16_admin_printer_setup.ui
@@ -26,7 +26,7 @@
       <x>30</x>
       <y>30</y>
       <width>1121</width>
-      <height>611</height>
+      <height>621</height>
      </rect>
     </property>
     <property name="layoutDirection">
@@ -41,9 +41,9 @@
     <widget class="QLabel" name="label_19">
      <property name="geometry">
       <rect>
-       <x>40</x>
-       <y>40</y>
-       <width>451</width>
+       <x>20</x>
+       <y>10</y>
+       <width>221</width>
        <height>51</height>
       </rect>
      </property>
@@ -69,8 +69,8 @@
     <widget class="QLabel" name="label_3">
      <property name="geometry">
       <rect>
-       <x>460</x>
-       <y>60</y>
+       <x>360</x>
+       <y>20</y>
        <width>221</width>
        <height>31</height>
       </rect>
@@ -97,9 +97,9 @@ color: rgb(170, 0, 0);</string>
     <widget class="QGroupBox" name="groupBox">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>130</y>
-       <width>631</width>
+       <x>30</x>
+       <y>80</y>
+       <width>621</width>
        <height>131</height>
       </rect>
      </property>
@@ -199,9 +199,9 @@ color: rgb(170, 0, 0);</string>
     <widget class="Line" name="line">
      <property name="geometry">
       <rect>
-       <x>110</x>
-       <y>280</y>
-       <width>921</width>
+       <x>20</x>
+       <y>240</y>
+       <width>1051</width>
        <height>16</height>
       </rect>
      </property>
@@ -212,10 +212,10 @@ color: rgb(170, 0, 0);</string>
     <widget class="QGroupBox" name="groupBox_2">
      <property name="geometry">
       <rect>
-       <x>200</x>
-       <y>320</y>
-       <width>661</width>
-       <height>241</height>
+       <x>20</x>
+       <y>280</y>
+       <width>1051</width>
+       <height>311</height>
       </rect>
      </property>
      <property name="font">
@@ -230,9 +230,9 @@ color: rgb(170, 0, 0);</string>
      <widget class="QPushButton" name="pushButton_5">
       <property name="geometry">
        <rect>
-        <x>310</x>
-        <y>170</y>
-        <width>131</width>
+        <x>510</x>
+        <y>270</y>
+        <width>101</width>
         <height>31</height>
        </rect>
       </property>
@@ -249,8 +249,8 @@ color: rgb(170, 0, 0);</string>
      <widget class="QLabel" name="label_8">
       <property name="geometry">
        <rect>
-        <x>130</x>
-        <y>80</y>
+        <x>30</x>
+        <y>40</y>
         <width>121</width>
         <height>41</height>
        </rect>
@@ -262,8 +262,8 @@ color: rgb(170, 0, 0);</string>
      <widget class="QComboBox" name="comboBox">
       <property name="geometry">
        <rect>
-        <x>300</x>
-        <y>80</y>
+        <x>160</x>
+        <y>40</y>
         <width>211</width>
         <height>41</height>
        </rect>
@@ -283,6 +283,93 @@ color: rgb(170, 0, 0);</string>
         <string>HP -  2000 ZZ</string>
        </property>
       </item>
+     </widget>
+     <widget class="QLabel" name="label_9">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>110</y>
+        <width>121</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Header Titlle:</string>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_2">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>110</y>
+        <width>311</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>HI TECH EQUIPMENTS</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_10">
+      <property name="geometry">
+       <rect>
+        <x>20</x>
+        <y>160</y>
+        <width>101</width>
+        <height>41</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Header Lines:</string>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="textEdit">
+      <property name="geometry">
+       <rect>
+        <x>160</x>
+        <y>170</y>
+        <width>311</width>
+        <height>91</height>
+       </rect>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;White House , 441 , Patana, India 400544&lt;/p&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;Contact No: 9773540255&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
+     </widget>
+     <widget class="QLabel" name="label_11">
+      <property name="geometry">
+       <rect>
+        <x>560</x>
+        <y>170</y>
+        <width>71</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Footer:</string>
+      </property>
+     </widget>
+     <widget class="QTextEdit" name="textEdit_2">
+      <property name="geometry">
+       <rect>
+        <x>650</x>
+        <y>170</y>
+        <width>311</width>
+        <height>101</height>
+       </rect>
+      </property>
+      <property name="html">
+       <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
+&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
+p, li { white-space: pre-wrap; }
+&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'MS Sans Serif'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
+&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;*********** Thanking You *********&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+      </property>
      </widget>
     </widget>
    </widget>
