--- a/FCI/ui/fci_04_batch_issues_submenu.ui
+++ b/FCI/ui/fci_04_batch_issues_submenu.ui
@@ -26,7 +26,7 @@
       <x>20</x>
       <y>20</y>
       <width>1311</width>
-      <height>681</height>
+      <height>691</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -38,50 +38,29 @@
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
       <rect>
-       <x>230</x>
-       <y>230</y>
-       <width>341</width>
-       <height>211</height>
+       <x>150</x>
+       <y>450</y>
+       <width>211</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <pointsize>22</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
      </property>
      <property name="text">
-      <string>Weighing Batches</string>
-     </property>
-    </widget>
-    <widget class="QPushButton" name="pushButton_4">
-     <property name="geometry">
-      <rect>
-       <x>790</x>
-       <y>230</y>
-       <width>321</width>
-       <height>211</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>MS Sans Serif</family>
-       <pointsize>22</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="text">
-      <string>Weighing Issues</string>
+      <string>Set Zero</string>
      </property>
     </widget>
     <widget class="QLabel" name="label_20">
      <property name="geometry">
       <rect>
-       <x>1060</x>
+       <x>1080</x>
        <y>10</y>
-       <width>251</width>
+       <width>201</width>
        <height>31</height>
       </rect>
      </property>
@@ -89,8 +68,8 @@
       <font>
        <family>MS Sans Serif</family>
        <pointsize>10</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
+       <weight>50</weight>
+       <bold>false</bold>
        <underline>false</underline>
       </font>
      </property>
@@ -98,7 +77,7 @@
       <string notr="true">color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
-      <string>05 Aug 2020 12:45 </string>
+      <string>05 Aug 2020 12:45:00</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
@@ -107,7 +86,7 @@
     <widget class="QPushButton" name="pushButton_2">
      <property name="geometry">
       <rect>
-       <x>1040</x>
+       <x>610</x>
        <y>590</y>
        <width>101</width>
        <height>31</height>
@@ -125,32 +104,113 @@
       <string>Return</string>
      </property>
     </widget>
-    <widget class="QLabel" name="label_21">
+    <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>120</x>
-       <y>120</y>
-       <width>461</width>
-       <height>61</height>
+       <x>440</x>
+       <y>450</y>
+       <width>211</width>
+       <height>71</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Sans Serif</family>
-       <pointsize>10</pointsize>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Weighing Batches</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_4">
+     <property name="geometry">
+      <rect>
+       <x>730</x>
+       <y>450</y>
+       <width>211</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Weighing Issues</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_5">
+     <property name="geometry">
+      <rect>
+       <x>1020</x>
+       <y>450</y>
+       <width>211</width>
+       <height>71</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="text">
+      <string>Other Weighing</string>
+     </property>
+    </widget>
+    <widget class="QLCDNumber" name="lcdNumber">
+     <property name="geometry">
+      <rect>
+       <x>270</x>
+       <y>90</y>
+       <width>761</width>
+       <height>251</height>
+      </rect>
+     </property>
+     <property name="layoutDirection">
+      <enum>Qt::LeftToRight</enum>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(0, 0, 0);
+font: 10pt &quot;MS Sans Serif&quot;;
+color: rgb(255, 0, 0);</string>
+     </property>
+     <property name="value" stdset="0">
+      <double>20000.000000000000000</double>
+     </property>
+    </widget>
+    <widget class="QLabel" name="label_53">
+     <property name="geometry">
+      <rect>
+       <x>1060</x>
+       <y>290</y>
+       <width>51</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <family>MS Shell Dlg 2</family>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
        <underline>false</underline>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">color: rgb(0, 0, 255);</string>
+      <string notr="true"/>
      </property>
      <property name="text">
-      <string>Please select the  Batch Or Issues for Weighing at Storage.</string>
+      <string>.Kg</string>
      </property>
      <property name="alignment">
-      <set>Qt::AlignCenter</set>
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
      </property>
     </widget>
    </widget>
