--- a/FCI/ui/fci_04_batch_issues_submenu.ui
+++ b/FCI/ui/fci_04_batch_issues_submenu.ui
@@ -29,12 +29,13 @@
       <x>30</x>
       <y>10</y>
       <width>1311</width>
-      <height>721</height>
+      <height>711</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>MS Sans Serif</family>
+      <pointsize>10</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -42,10 +43,13 @@
 </string>
     </property>
     <property name="frameShape">
-     <enum>QFrame::StyledPanel</enum>
+     <enum>QFrame::Box</enum>
     </property>
     <property name="frameShadow">
-     <enum>QFrame::Raised</enum>
+     <enum>QFrame::Plain</enum>
+    </property>
+    <property name="lineWidth">
+     <number>3</number>
     </property>
     <widget class="QPushButton" name="pushButton">
      <property name="geometry">
@@ -77,7 +81,7 @@ background-color: rgb(170, 0, 0);
      <property name="geometry">
       <rect>
        <x>50</x>
-       <y>0</y>
+       <y>20</y>
        <width>221</width>
        <height>51</height>
       </rect>
@@ -178,19 +182,30 @@ background-color: rgb(0, 0, 255);</string>
        <x>50</x>
        <y>90</y>
        <width>1141</width>
-       <height>311</height>
+       <height>321</height>
       </rect>
      </property>
      <property name="layoutDirection">
       <enum>Qt::LeftToRight</enum>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(0, 0, 0);
-font: 10pt &quot;MS Sans Serif&quot;;
-color: rgb(255, 0, 0);</string>
+      <string notr="true">color: rgb(255, 0, 0);
+background-color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="frameShape">
+      <enum>QFrame::Box</enum>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>4</number>
      </property>
      <property name="digitCount">
       <number>7</number>
+     </property>
+     <property name="segmentStyle">
+      <enum>QLCDNumber::Flat</enum>
      </property>
      <property name="value" stdset="0">
       <double>-200000.000000000000000</double>
@@ -202,16 +217,16 @@ color: rgb(255, 0, 0);</string>
     <widget class="QLabel" name="label_53">
      <property name="geometry">
       <rect>
-       <x>1210</x>
-       <y>300</y>
-       <width>81</width>
+       <x>1200</x>
+       <y>340</y>
+       <width>91</width>
        <height>91</height>
       </rect>
      </property>
      <property name="font">
       <font>
-       <family>MS Shell Dlg 2</family>
-       <pointsize>28</pointsize>
+       <family>Arial</family>
+       <pointsize>36</pointsize>
        <weight>75</weight>
        <bold>true</bold>
        <underline>false</underline>
@@ -221,7 +236,7 @@ color: rgb(255, 0, 0);</string>
       <string notr="true">color: rgb(0, 0, 0);</string>
      </property>
      <property name="text">
-      <string>.Kg</string>
+      <string>Kg.</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -291,6 +306,12 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);
 border-color: rgb(255, 255, 255);</string>
      </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>3</number>
+     </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
      </property>
@@ -327,8 +348,8 @@ border-color: rgb(255, 255, 255);</string>
       <rect>
        <x>330</x>
        <y>520</y>
-       <width>111</width>
-       <height>61</height>
+       <width>101</width>
+       <height>51</height>
       </rect>
      </property>
      <property name="font">
@@ -344,6 +365,15 @@ border-color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>TARE</string>
+     </property>
+     <property name="iconSize">
+      <size>
+       <width>16</width>
+       <height>16</height>
+      </size>
+     </property>
+     <property name="autoRepeat">
+      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit">
