--- a/FCI/ui/fci_45_pendings.ui
+++ b/FCI/ui/fci_45_pendings.ui
@@ -281,8 +281,8 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
-color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(0, 0, 255);</string>
      </property>
      <property name="text">
       <string>DATE</string>
@@ -358,7 +358,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
+      <string notr="true">background-color: rgb(0, 0, 255);
 color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
@@ -685,13 +685,19 @@ color: rgb(0, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>0</x>
-       <y>390</y>
+       <y>380</y>
        <width>661</width>
        <height>20</height>
       </rect>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="midLineWidth">
+      <number>1</number>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -715,27 +721,11 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
-color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(255, 15, 235);</string>
      </property>
      <property name="text">
       <string>LIST</string>
-     </property>
-    </widget>
-    <widget class="Line" name="line_4">
-     <property name="geometry">
-      <rect>
-       <x>0</x>
-       <y>560</y>
-       <width>661</width>
-       <height>20</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Horizontal</enum>
      </property>
     </widget>
     <widget class="Line" name="line_3">
@@ -746,6 +736,12 @@ color: rgb(255, 255, 255);</string>
        <width>20</width>
        <height>291</height>
       </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
      </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -760,31 +756,11 @@ color: rgb(255, 255, 255);</string>
        <height>301</height>
       </rect>
      </property>
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
-    </widget>
-    <widget class="Line" name="line_6">
-     <property name="geometry">
-      <rect>
-       <x>330</x>
-       <y>400</y>
-       <width>20</width>
-       <height>301</height>
-      </rect>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
-    <widget class="Line" name="line_7">
-     <property name="geometry">
-      <rect>
-       <x>480</x>
-       <y>400</y>
-       <width>20</width>
-       <height>301</height>
-      </rect>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
      </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
@@ -802,7 +778,7 @@ color: rgb(255, 255, 255);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -829,7 +805,7 @@ color: rgb(255, 255, 255);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -856,7 +832,7 @@ color: rgb(255, 255, 255);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -883,7 +859,7 @@ color: rgb(255, 255, 255);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -904,11 +880,44 @@ color: rgb(255, 255, 255);</string>
        <x>0</x>
        <y>450</y>
        <width>661</width>
-       <height>20</height>
+       <height>41</height>
       </rect>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="sizeIncrement">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
      </property>
      <property name="styleSheet">
       <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="midLineWidth">
+      <number>1</number>
      </property>
      <property name="orientation">
       <enum>Qt::Horizontal</enum>
@@ -918,15 +927,15 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>40</x>
-       <y>420</y>
+       <y>410</y>
        <width>121</width>
-       <height>21</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -945,17 +954,18 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>200</x>
-       <y>420</y>
+       <y>410</y>
        <width>121</width>
-       <height>21</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
+       <strikeout>false</strikeout>
       </font>
      </property>
      <property name="styleSheet">
@@ -972,15 +982,15 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>350</x>
-       <y>420</y>
+       <y>400</y>
        <width>121</width>
-       <height>21</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -999,15 +1009,15 @@ color: rgb(255, 255, 255);</string>
      <property name="geometry">
       <rect>
        <x>500</x>
-       <y>420</y>
+       <y>410</y>
        <width>121</width>
-       <height>21</height>
+       <height>41</height>
       </rect>
      </property>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1016,44 +1026,10 @@ color: rgb(255, 255, 255);</string>
       <string notr="true">color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
-      <string>OTHES</string>
+      <string>OTHERS</string>
      </property>
      <property name="alignment">
       <set>Qt::AlignCenter</set>
-     </property>
-    </widget>
-    <widget class="QCalendarWidget" name="calendarWidget">
-     <property name="geometry">
-      <rect>
-       <x>600</x>
-       <y>150</y>
-       <width>341</width>
-       <height>231</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(170, 255, 255);
-color: rgb(0, 0, 0);</string>
-     </property>
-     <property name="gridVisible">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QCalendarWidget" name="calendarWidget_2">
-     <property name="geometry">
-      <rect>
-       <x>960</x>
-       <y>310</y>
-       <width>341</width>
-       <height>231</height>
-      </rect>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">background-color: rgb(170, 255, 255);
-color: rgb(0, 0, 0);</string>
-     </property>
-     <property name="gridVisible">
-      <bool>true</bool>
      </property>
     </widget>
     <widget class="QLabel" name="label_7">
@@ -1101,7 +1077,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
+      <string notr="true">background-color: rgb(0, 0, 255);
 color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
@@ -1178,7 +1154,7 @@ color: rgb(0, 0, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
+      <string notr="true">background-color: rgb(0, 0, 255);
 color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
@@ -1551,7 +1527,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1578,7 +1554,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1605,7 +1581,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1648,7 +1624,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>Arial</family>
-       <pointsize>12</pointsize>
+       <pointsize>14</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1692,19 +1668,6 @@ color: rgb(0, 0, 0);</string>
       <enum>Qt::Vertical</enum>
      </property>
     </widget>
-    <widget class="Line" name="line_13">
-     <property name="geometry">
-      <rect>
-       <x>650</x>
-       <y>400</y>
-       <width>20</width>
-       <height>301</height>
-      </rect>
-     </property>
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
     <widget class="Line" name="line_14">
      <property name="geometry">
       <rect>
@@ -1730,7 +1693,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1757,7 +1720,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1784,7 +1747,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1811,7 +1774,7 @@ color: rgb(0, 0, 0);</string>
      <property name="font">
       <font>
        <family>MS Sans Serif</family>
-       <pointsize>14</pointsize>
+       <pointsize>16</pointsize>
        <weight>75</weight>
        <bold>true</bold>
       </font>
@@ -1868,8 +1831,8 @@ background-color: rgb(0, 180, 0);</string>
       </font>
      </property>
      <property name="styleSheet">
-      <string notr="true">background-color: rgb(90, 90, 134);
-color: rgb(255, 255, 255);</string>
+      <string notr="true">color: rgb(255, 255, 255);
+background-color: rgb(255, 15, 235);</string>
      </property>
      <property name="text">
       <string>LIST</string>
@@ -1923,6 +1886,162 @@ background-color: rgb(0, 0, 255);</string>
       <string>LIST</string>
      </property>
     </widget>
+    <widget class="Line" name="line_15">
+     <property name="geometry">
+      <rect>
+       <x>660</x>
+       <y>560</y>
+       <width>671</width>
+       <height>20</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+    <widget class="QCalendarWidget" name="calendarWidget">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>10</y>
+       <width>341</width>
+       <height>231</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(170, 255, 255);
+color: rgb(0, 0, 0);</string>
+     </property>
+     <property name="gridVisible">
+      <bool>true</bool>
+     </property>
+    </widget>
+    <widget class="Line" name="line_7">
+     <property name="geometry">
+      <rect>
+       <x>480</x>
+       <y>400</y>
+       <width>20</width>
+       <height>301</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+    <widget class="Line" name="line_13">
+     <property name="geometry">
+      <rect>
+       <x>330</x>
+       <y>400</y>
+       <width>20</width>
+       <height>301</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+    <widget class="Line" name="line_6">
+     <property name="geometry">
+      <rect>
+       <x>650</x>
+       <y>390</y>
+       <width>20</width>
+       <height>311</height>
+      </rect>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Vertical</enum>
+     </property>
+    </widget>
+    <widget class="Line" name="line_16">
+     <property name="geometry">
+      <rect>
+       <x>0</x>
+       <y>550</y>
+       <width>661</width>
+       <height>41</height>
+      </rect>
+     </property>
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Minimum" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
+     <property name="minimumSize">
+      <size>
+       <width>20</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="sizeIncrement">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="baseSize">
+      <size>
+       <width>0</width>
+       <height>0</height>
+      </size>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">color: rgb(255, 255, 255);</string>
+     </property>
+     <property name="frameShadow">
+      <enum>QFrame::Plain</enum>
+     </property>
+     <property name="lineWidth">
+      <number>1</number>
+     </property>
+     <property name="midLineWidth">
+      <number>1</number>
+     </property>
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+    </widget>
+   </widget>
+   <widget class="QCalendarWidget" name="calendarWidget_2">
+    <property name="geometry">
+     <rect>
+      <x>0</x>
+      <y>0</y>
+      <width>341</width>
+      <height>231</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 255, 255);
+color: rgb(0, 0, 0);</string>
+    </property>
+    <property name="gridVisible">
+     <bool>true</bool>
+    </property>
    </widget>
   </widget>
   <widget class="QMenuBar" name="menubar">
