--- a/FCI/ui/fci_04_batch_issues_submenu.ui
+++ b/FCI/ui/fci_04_batch_issues_submenu.ui
@@ -107,8 +107,8 @@ background-color: rgb(170, 0, 0);
     <widget class="QPushButton" name="pushButton_3">
      <property name="geometry">
       <rect>
-       <x>50</x>
-       <y>620</y>
+       <x>60</x>
+       <y>530</y>
        <width>111</width>
        <height>51</height>
       </rect>
@@ -132,7 +132,7 @@ background-color: rgb(170, 0, 0);</string>
      <property name="geometry">
       <rect>
        <x>230</x>
-       <y>620</y>
+       <y>530</y>
        <width>111</width>
        <height>51</height>
       </rect>
@@ -156,7 +156,7 @@ background-color: rgb(0, 180, 0);</string>
      <property name="geometry">
       <rect>
        <x>410</x>
-       <y>620</y>
+       <y>530</y>
        <width>111</width>
        <height>51</height>
       </rect>
@@ -314,66 +314,6 @@ border-color: rgb(255, 255, 255);</string>
      </property>
      <property name="orientation">
       <enum>Qt::Vertical</enum>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton_3">
-     <property name="geometry">
-      <rect>
-       <x>110</x>
-       <y>520</y>
-       <width>121</width>
-       <height>61</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="text">
-      <string>GROSS</string>
-     </property>
-     <property name="checked">
-      <bool>true</bool>
-     </property>
-    </widget>
-    <widget class="QRadioButton" name="radioButton_4">
-     <property name="geometry">
-      <rect>
-       <x>330</x>
-       <y>520</y>
-       <width>101</width>
-       <height>51</height>
-      </rect>
-     </property>
-     <property name="font">
-      <font>
-       <family>Arial</family>
-       <pointsize>16</pointsize>
-       <weight>75</weight>
-       <bold>true</bold>
-      </font>
-     </property>
-     <property name="styleSheet">
-      <string notr="true">color: rgb(255, 255, 255);</string>
-     </property>
-     <property name="text">
-      <string>TARE</string>
-     </property>
-     <property name="iconSize">
-      <size>
-       <width>16</width>
-       <height>16</height>
-      </size>
-     </property>
-     <property name="autoRepeat">
-      <bool>false</bool>
      </property>
     </widget>
     <widget class="QLineEdit" name="lineEdit">
@@ -573,6 +513,52 @@ color: rgb(255, 255, 255);</string>
      </property>
      <property name="text">
       <string>LOGOUT</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_12">
+     <property name="geometry">
+      <rect>
+       <x>230</x>
+       <y>620</y>
+       <width>111</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 85, 255);</string>
+     </property>
+     <property name="text">
+      <string>GROSS</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="pushButton_13">
+     <property name="geometry">
+      <rect>
+       <x>410</x>
+       <y>620</y>
+       <width>111</width>
+       <height>51</height>
+      </rect>
+     </property>
+     <property name="font">
+      <font>
+       <pointsize>14</pointsize>
+       <weight>75</weight>
+       <bold>true</bold>
+      </font>
+     </property>
+     <property name="styleSheet">
+      <string notr="true">background-color: rgb(255, 85, 255);</string>
+     </property>
+     <property name="text">
+      <string>TARE</string>
      </property>
     </widget>
    </widget>
